refactor to use longs for weighted completion times